Fix z-index when field is in a dialog body

--- a/views/assets/css/components/time_picker_field.css
+++ b/views/assets/css/components/time_picker_field.css
@@ -9,7 +9,7 @@
   width: 100%;
   overflow: visible auto;
   filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
-  z-index: 1;
+  z-index: 16;
 }
 
 .time-picker-field__time-list ul {
